force-app/main/default/objects/redu_Email_Sender__c/redu_Email_Sender__c.object-meta.xml
<CustomObject>
    <label>Email Sender</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Email Sender ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Senders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>