force-app/main/default/objects/redu_Email_Sender__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>The brand (provider) this email sender applies to.</description>
    <inlineHelpText>The brand (provider) this email sender applies to.</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>redu_Brand</valueSetName>
    </valueSet>
</CustomField>