force-app/main/default/objects/redu_Email_Sender__c/fields/Destination_Centre__c.field-meta.xml
<CustomField>
    <fullName>Destination_Centre__c</fullName>
    <label>Destination Centre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(All)</fullName>
            </value>
            <value>
                <fullName>Auckland</fullName>
            </value>
            <value>
                <fullName>Australian National University</fullName>
            </value>
            <value>
                <fullName>Baylor University</fullName>
            </value>
            <value>
                <fullName>Brighton</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Cardiff University</fullName>
            </value>
            <value>
                <fullName>Centre for Arts and Technology</fullName>
            </value>
            <value>
                <fullName>Coventry University London</fullName>
            </value>
            <value>
                <fullName>DePaul University</fullName>
            </value>
            <value>
                <fullName>Durham University</fullName>
            </value>
            <value>
                <fullName>Flinders University</fullName>
            </value>
            <value>
                <fullName>James Madison University</fullName>
            </value>
            <value>
                <fullName>Kingston University London</fullName>
            </value>
            <value>
                <fullName>Lancaster University</fullName>
            </value>
            <value>
                <fullName>Leeds Beckett University</fullName>
            </value>
            <value>
                <fullName>Lipscomb University</fullName>
            </value>
            <value>
                <fullName>Liverpool John Moores University</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Long Island University Brooklyn</fullName>
            </value>
            <value>
                <fullName>Long Island University Post</fullName>
            </value>
            <value>
                <fullName>Lynn University</fullName>
            </value>
            <value>
                <fullName>Melbourne</fullName>
            </value>
            <value>
                <fullName>Perth</fullName>
            </value>
            <value>
                <fullName>Royal Holloway</fullName>
            </value>
            <value>
                <fullName>Royal Roads University International Study Centre</fullName>
            </value>
            <value>
                <fullName>Sydney Darlinghurst</fullName>
            </value>
            <value>
                <fullName>Sydney Waterloo</fullName>
            </value>
            <value>
                <fullName>Teesside University</fullName>
            </value>
            <value>
                <fullName>Texas A&amp;M Corpus Christi University</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>