force-app/main/default/objects/redu_Email_Sender__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Purpose category-type associated with sender.</description>
    <inlineHelpText>Purpose category-type associated with sender.</inlineHelpText>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Communication_Purpose</valueSetName>
    </valueSet>
</CustomField>