force-app/main/default/objects/redu_Email_Sender__c/fields/redu_Category__c.field-meta.xml
<CustomField>
    <fullName>redu_Category__c</fullName>
    <description>Category of email for this sender</description>
    <inlineHelpText>Category of email for this sender</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Communication_Category</valueSetName>
    </valueSet>
</CustomField>