force-app/main/default/objects/redu_Email_Sender__c/fields/redu_Contact__c.field-meta.xml
<CustomField>
    <fullName>redu_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Senders</relationshipLabel>
    <relationshipName>Email_Senders</relationshipName>
    <type>Lookup</type>
</CustomField>