force-app/main/default/objects/redu_Email_Sender__c/fields/redu_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>redu_Contact_Email__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>