force-app/main/default/objects/redu_Email_Sender__c/fields/redu_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>redu_Contact_Name__c</fullName>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>