force-app/main/default/objects/redu_Email_Sender__c/fields/redu_Department__c.field-meta.xml
<CustomField>
    <fullName>redu_Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>CDM Admissions</fullName>
            </value>
            <value>
                <fullName>College of Law</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Enrollment Services</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Freshman Admissions</fullName>
            </value>
            <value>
                <fullName>Graduate Admissions</fullName>
            </value>
            <value>
                <fullName>ISC</fullName>
            </value>
            <value>
                <fullName>ISSS</fullName>
            </value>
            <value>
                <fullName>KGSB Admissions</fullName>
            </value>
            <value>
                <fullName>OIE</fullName>
            </value>
            <value>
                <fullName>Scholarship</fullName>
            </value>
            <value>
                <fullName>Transfer Admissions</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>