force-app/main/default/objects/redu_Email_Sender__c/fields/redu_Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>redu_Destination_Country__c</fullName>
    <description>The country the sender is associated with.</description>
    <inlineHelpText>The country the sender is associated with.</inlineHelpText>
    <label>Destination Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Nederlands</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>