force-app/main/default/objects/redu_Email_Sender__c/fields/redu_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>redu_Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>